force-app/main/default/objects/custom_create304__c/custom_create304__c.object-meta.xml
<CustomObject>
    <label>Custom created object304</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects304</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>