force-app/main/default/objects/custom_create304__c/fields/custom_create_304field513__c.field-meta.xml
<CustomField>
    <fullName>custom_create_304field513__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 304field513</label>
    <type>Checkbox</type>
</CustomField>